--- a/main.css
+++ b/main.css
@@ -1,7 +1,22 @@
 #ball{
+    position: relative;
     background-color: #990000;
     width: 50px;
     height: 50px;
     padding: 20px;
     border-radius: 50%;
+    animation-name: ball-move;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+@keyframes ball-move {
+    0%{
+        left: 0px;
+    }
+    50%{
+        left: 200px;
+    }
+    100%{
+        left: 0px;
+    }
 }
