--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@
 
 #ammo{
     position: inherit;
+    top:25px;
     background-color: #990099;
     width: 5px;
     height: 5px;
@@ -43,7 +44,7 @@
 
 .ball-move-click {
     animation-name: ball-move;
-    animation-duration: 4s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
 }
 
