--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
 
 #gun{
     position: relative;
-    top: auto;
+    top: 100px;
     background-color: #990099;
     width: 50px;
     height: 50px;
