--- a/css/background.css
+++ b/css/background.css
@@ -1,7 +1,7 @@
 #floor{
     position: fixed;
-    top: 600px;
-    width: max-content;
+    top: 400px;
+    width: 100%;
     height: 100px;
     background-color: #000000;
 }
